# mirte-install-scripts

./: .gitignore  .pre-commit-config.yaml  Telemetrix4RpiPico.uf2  create_user.sh  download_repos.sh  install_ROS.sh  install_arduino.sh  install_bt.sh  install_docs.sh  install_fake_bt.sh  install_jupyter_ros.sh  install_mirte.sh  install_mirte_master.sh  install_pam.sh  install_pico.sh  install_vscode.sh  install_web.sh  mirte_master.sh  network_install.sh  network_setup.sh  nginx.conf  nginx_login.conf  repos.yaml  run_arduino.sh  update.sh  usb_eth_setup.sh  usb_ethernet.sh
.github/workflows/: c_check.yml  cmake_check.yml  shellcheck.yml  shfmt.yml
config/: code_server_config.yaml
config/web/: newpasswd  password_map.conf
fix_scripts/: fix_arm.sh  readme.md  update_all.sh  update_pico.sh  update_tmx.sh
mirte-master/usb_switch/: CMakeLists.txt  readme.md  usb_switch.cpp
pam/: .gitignore  CMakeLists.txt  install_json.sh  install_module.sh  mirte_pam.h  readme.md  storepassword.c  test.c  warn.c
pam/cmake/modules/: FindPAM.cmake
pam/password_manager/: manager.py
provisioning/: machine_config.py  mirte-provisioning.service  provisioning.py  provisioning.service  robot_config.py  ssh.py
provisioning/store/: machine_config.yaml  readme.md
services/: mirte-jupyter.service  mirte-master-ros.service  mirte-passwords.service  mirte-ros.service  mirte-shutdown.service  mirte-usb-switch.service  mirte-usb.service  mirte-vscode.service  mirte_boot.sh  mirte_master_check.sh  mirte_ros.sh  mirte_shutdown.bash  mirte_shutdown.sh  readme.md
sites/: 401.html
sites/list/: index.html
sites/login/: index.html
sites/login/newpassword/: index.html
vscode/: index.html
